--- a/project.config
+++ b/project.config
@@ -1,2 +1,9 @@
 [project]
 	state = active
+[access "refs/heads/*"]
+	owner = group Administrators
+	create = group sserrano3gxx
+	push = +force group sserrano3gxx
+	label-Code-Review = -2..+2 group sserrano3gxx
+	label-Verified = -1..+1 group sserrano3gxx
+	submit = group sserrano3gxx
