Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,5 +1,4 @@
 [project]
-	state = active
 [access "refs/heads/*"]
 	owner = group Administrators
 	create = group sserrano3gxx
@@ -7,3 +6,5 @@
 	label-Code-Review = -2..+2 group sserrano3gxx
 	label-Verified = -1..+1 group sserrano3gxx
 	submit = group sserrano3gxx
+[submit]
+	action = rebase if necessary
