Rename group sserrano3gxx to serrano3gxx

--- a/project.config
+++ b/project.config
@@ -1,10 +1,10 @@
 [project]
 [access "refs/heads/*"]
 	owner = group Administrators
-	create = group sserrano3gxx
-	push = +force group sserrano3gxx
-	label-Code-Review = -2..+2 group sserrano3gxx
-	label-Verified = -1..+1 group sserrano3gxx
-	submit = group sserrano3gxx
+	create = group serrano3gxx
+	push = +force group serrano3gxx
+	label-Code-Review = -2..+2 group serrano3gxx
+	label-Verified = -1..+1 group serrano3gxx
+	submit = group serrano3gxx
 [submit]
 	action = rebase if necessary
